# surrealmud

./: .gitignore  Cargo.toml
data/: config.default.toml  schema.surql
surrealmud-game/: Cargo.toml
surrealmud-portal/: Cargo.toml
surrealmud-portal/src/: lib.rs  main.rs  surreal.rs
surrealmud-portal/src/telnet/: codec.rs  conn.rs  listen.rs  mod.rs  surreal.rs
surrealmud-shared/: Cargo.toml
surrealmud-shared/src/: lib.rs
