[workspace]

members = [
    "surrealmud-shared",
    "surrealmud-portal",
    "surrealmud-game"
]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = {version = "1.43", features = ["full"]}
tokio-util = {version = "0.7", features = ["codec"]}
tokio-stream = {version = "0.1", features = ["time"]}
rand = "0.8"
bytes = "1.9"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
toml = "0.8"
chrono = "0.4"
regex = "1.11"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = {version = "4.5", features = ["derive"]}
flate2 = "1.0"
lazy-regex = "3.2"
trust-dns-resolver = "0.23"
#rustls-pemfile = "2.1"
bitflags = "2.8"
#rust_socketio = { version = "0.6", features = ["async"] }
surrealdb = "2.1"
futures = "0.3"
futures-util = "0.3"
config = "0.15"
once_cell = "1.20"
